End of the year.css
import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
body {
    margin: 0;
    background: white;
    width: 100%;
    font-size: 20px;
}

p { 
    font-family: Roboto; 
    font-size: 20px;
    margin: 0px;
   }


   .bodyWrapper {
    width:100%;
    height: fit-content;
    position: absolute;
    font-size: 30px;
    display: flex;
}

.bodyObject {
    width: 50%;
    height: 300px;
    font-size: 30px;
    position: absolute;
}

.bodyObjectpadding {
    padding: 20px;
}


img {margin: 30px;
    position: absolute;
    float: right;}

.rainbow_text {
    background-image: linear-gradient(to left,  violet, indigo, blue, green, yellow, orange, red); -webkit-background-clip: text;
    color: transparent;
  }

